# front-nota

Nota-FastApi/: teste.db
Nota-FastApi/prototipo/: alembic.ini  banco.db  main.py  pyproject.toml  teste.db
Nota-FastApi/prototipo/alembic/: env.py
Nota-FastApi/prototipo/alembic/versions/: 2c2bdea1817c_create_note_table.py  3238f365c682_create_note_table.py  57be44e6f3d9_add_bool.py  57fdd62d5d84_create_account_table.py  59c3a7e53491_add_pass.py  7d1520c0cb97_create_note_table.py  8f5f50ea40ab_add_bool.py  91368be0ff1d_create_note_tablee.py  97835f78a477_initial_migration.py  aabe4bd09fa0_add_column.py  bc31817a19e5_create_note_table.py
Nota-FastApi/prototipo/db/: connection.py  deps.py  model.py
Nota-FastApi/prototipo/routes/: front_form_router.py  user_routes.py
Nota-FastApi/prototipo/schema/: user_schema.py
Nota-FastApi/prototipo/static/: buscar_nota.css  cadastro.css  home.css  login.css  nota.css
Nota-FastApi/prototipo/templates/: buscar_nota.html  cadastro.html  home.html  login.html  nota.html  oi.html
Nota-FastApi/prototipo/use_case/: user_use_cases.py
